# linkedin-networking-cli

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  DESIGN-PROPOSALS.md  Dockerfile  FABLE5-AUDIT.md  FABLE5-IMPLEMENTATION-LOG.md  FABLE5-NEXT-STEPS.md  README.md  TODOS.md  coverage.xml  linkedin_cli.py  linkedin_run.py  linkedin_tui.py  migrate_database.py  migrate_schema.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: code-review-2026-07-13.md  e2e-test-report-2026-07-13.md  tui-migration.md
scripts/: migrate_database.py  migrate_schema.py
src/: exceptions.py  styles.css
src/automation/: checker.py  diagnostics.py  interactions.py  linkedin.py  linkedin_mappings.py  localization.py  navigation.py  scraping.py  selectors.py  session.py
src/cli/: __init__.py  automation_errors.py  helpers.py  runner.py
src/config/: settings.py
src/database/: models.py  operations.py
src/llm_assist/: __init__.py  client.py  errors.py  extraction.py  hardware.py  matching.py  postprocess.py  prompts.py  schema.py
src/tui/: __init__.py  __main__.py  app.py  app.tcss  commands.py  focus_nav.py  nav.py  theme.py
src/tui/screens/: __init__.py  _mascot.py  _mascot_large.py  _wordmark.py  automation_errors.py  automation_run.py  base.py  campaign_ai_assist.py  campaign_detail.py  campaign_edit.py  campaign_form.py  campaigns.py  check_connections.py  create_campaign.py  dashboard.py  execute_campaign.py  extract_profiles.py  home.py  main_menu.py  run_panel.py  settings_view.py  workers.py
src/utils/: __init__.py  logging.py
tests/: README.md  __init__.py  conftest.py  test_checker.py  test_cli_automation_errors.py  test_cli_helpers.py  test_cli_run_command.py  test_cli_run_loops.py  test_cli_settings_display.py  test_database_operations.py  test_diagnostics.py  test_interactions.py  test_linkedin_automation.py  test_linkedin_mappings.py  test_llm_assist_client.py  test_llm_assist_extraction.py  test_llm_assist_hardware.py  test_llm_assist_matching.py  test_llm_assist_postprocess.py  test_llm_assist_schema.py  test_models.py  test_navigation.py  test_scraping.py  test_selectors.py  test_session.py  test_settings.py  test_tui.py  test_tui_arrow_focus.py  test_tui_automation.py  test_tui_campaign_ai_assist.py  test_tui_campaign_detail.py  test_tui_create_campaign.py  test_tui_dashboard.py  test_tui_home.py  test_tui_location_search.py  test_tui_ux.py
tools/mascot/: bit_sprite_source.py  generate.py  generate_large.py  generate_wordmark.py  mascot.txt
