[project]
name = "linkedin-networking-cli"
version = "0.1.0"
description = "Interactive CLI tool for LinkedIn networking automation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.40.0",
    "sqlmodel>=0.0.14",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "inquirerpy>=0.3.4",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",  # Para tests paralelos
    "freezegun>=1.4.0",  # Para mockear tiempo
]

[project.scripts]
linkedin-cli = "linkedin_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests that don't require external dependencies",
    "integration: Integration tests that may require browser or database",
    "slow: Tests that take significant time to run",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
