[project]
name = "linkedin-networking-cli"
version = "0.1.0"
description = "Interactive CLI tool for LinkedIn networking automation"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = ["linkedin", "networking", "automation", "cli", "playwright"]
authors = [{ name = "linkedin-networking-cli contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "playwright>=1.40.0",
    "sqlmodel>=0.0.14",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "psutil>=5.9.0",
    "textual>=8.2.7",
]

[project.urls]
Repository = "https://github.com/bman95/linkedin-networking-cli"
Issues = "https://github.com/bman95/linkedin-networking-cli/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",  # For parallel tests
    "freezegun>=1.4.0",  # For mocking time
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
linkedin-tui = "linkedin_tui:main"
linkedin-run = "linkedin_run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# The runtime modules live under src/ and are imported as top-level packages
# (database, automation, config, utils, exceptions, tui). Map src/ to the wheel
# root and ship the top-level entry points alongside them.
only-include = ["src", "linkedin_tui.py", "linkedin_run.py"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests that don't require external dependencies",
    "integration: Integration tests that may require browser or database",
    "slow: Tests that take significant time to run",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "F841", "B017"]
# Logging must be configured before the app package imports (module docstrings).
"src/tui/__main__.py" = ["E402"]
"linkedin_tui.py" = ["E402"]
"linkedin_run.py" = ["E402"]
"tests/conftest.py" = ["E402"]
# Generated half-block art data — single-line row strings by construction.
"src/tui/screens/_mascot_large.py" = ["E501"]
"src/tui/screens/_wordmark.py" = ["E501"]
# One-off tooling, not shipped: long report lines and in-loop helper closures.
"scripts/*" = ["E501"]
"tools/*" = ["E501", "B905", "B023"]
# Pre-existing long lines in the automation/data core; shrink opportunistically.
"src/automation/checker.py" = ["E501"]
"src/automation/linkedin.py" = ["E501"]
"src/automation/scraping.py" = ["E501"]
"src/config/settings.py" = ["E501"]
"src/database/operations.py" = ["E501"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
exclude = ["tests/", "scripts/"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
